<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic WebService</string>
    <string name="realizarPeticion">realizar peticion</string>
    <string name="dni">DNI</string>

	<string name="consultar">Consultar</string>
	<string name="insertar">Insertar</string>
	<string name="modificar">Modificar</string>
	<string name="borrar">Borrar</string>
    
	<string name="labelConsulta">Consulta de Registros</string>
	<string name="labelInsercion">Inserción de Registros</string>
	<string name="labelActualizacion">Actualización de Registros</string>
	<string name="labelBorrado">Borrado de Registros</string>
	
	<string name="textView1">DNI</string>
	<string name="textView2">Nombre</string>
	<string name="textView3">Apellidos</string>
	<string name="textView4">Dirección</string>
	<string name="textView5">Teléfono</string>
	<string name="textView6">Equipo</string>
	
	<string name="irPrimero">Primer registro</string>
	<string name="irAnterior">Registro anterior</string>
	<string name="irSiguiente">Siguiente registro</string>
	<string name="irUltimo">Último registro</string>
	<string name="irInicio">Inicio</string>
	
	<string name="existRecord">Registro existente</string>
	<string name="noDNI">Debe introducir un DNI</string>
	<string name="invalidDNI">El DNI debe tener 8 dígitos</string>
	<string name="consultaOk">Consulta finalizada</string>
	<string name="errorConexion">Error al conectar con el servicio:\ncompruebe los parámetros de configuración</string>
	<string name="conexionOk">Servicio conectado correctamente</string>
	<string name="errorData">Error al procesar los datos</string>
	<string name="peticionAPI">Realizando petición al API</string>
	<string name="errorAPI">Error en el acceso al API</string>
	<string name="sinRegistros">La consulta no devuelve ningún registro</string>
	<string name="procesoCancelado">Proceso cancelado por el usuario</string>
	<string name="insercionCancelada">Inserción cancelada</string>
	<string name="actualizacionCancelada">Actualización cancelada</string>
	<string name="borradoCancelado">Borrado cancelado</string>
	<string name="insercionOk">Inserción realizada</string>
	<string name="actualizacionOk">Actualización realizada</string>
	<string name="borradoOk">Borrado realizado</string>
	<string name="titulo">Título</string>
	<string name="subtitulo">Subtítulo</string>
	<string name="configurar">Configurar conexión</string>
									
</resources>
