<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/dniConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dni"
        android:inputType="number"
        android:maxLength="8"
        android:textSize="25sp"
        android:width="200dp" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/consultar"
            android:onClick="verFichas"
            android:src="@android:drawable/ic_menu_search" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/insertar"
            android:onClick="insertarFicha"
            android:scaleType="center"
            android:src="@android:drawable/ic_menu_add" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/modificar"
            android:onClick="modificarFicha"
            android:scaleType="center"
            android:src="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/borrar"
            android:onClick="borrarFicha"
            android:scaleType="center"
            android:src="@android:drawable/ic_menu_delete" />

    </LinearLayout>

</LinearLayout>
